[gd_scene load_steps=5 format=3 uid="uid://stationpreview3d001"]

[ext_resource type="Script" path="res://src/scenes/StationPreview3DScene.gd" id="1_scene"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.05, 0.05, 0.1, 1)
ambient_light_source = 2
ambient_light_color = Color(0.3, 0.35, 0.4, 1)
ambient_light_energy = 0.6
ssao_enabled = true
glow_enabled = true
glow_intensity = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_grid"]
albedo_color = Color(0.2, 0.2, 0.25, 0.3)
transparency = 1

[sub_resource type="PlaneMesh" id="PlaneMesh_grid"]
size = Vector2(30, 30)
material = SubResource("StandardMaterial3D_grid")

[node name="StationPreview3D" type="Node3D"]
script = ExtResource("1_scene")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 8, 15, 8)
light_color = Color(0.9, 0.9, 1.0, 1)
light_energy = 1.0
shadow_enabled = true

[node name="FillLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, 0.353553, -0.353553, 0, 0.707107, 0.707107, 0.5, -0.612372, 0.612372, -5, 10, -5)
light_color = Color(0.6, 0.7, 0.9, 1)
light_energy = 0.4

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.816497, 0.577350, 0, -0.577350, 0.816497, 0, 12, 16)
current = true
projection = 1
size = 15.0
far = 100.0

[node name="StationContainer" type="Node3D" parent="."]

[node name="GridFloor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
mesh = SubResource("PlaneMesh_grid")

[node name="UI" type="CanvasLayer" parent="."]
layer = 10

[node name="StationInfoPanel" type="PanelContainer" parent="UI"]
anchors_preset = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 300.0
offset_bottom = 250.0

[node name="VBox" type="VBoxContainer" parent="UI/StationInfoPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Margin" type="MarginContainer" parent="UI/StationInfoPanel/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_top = 12

[node name="StationName" type="Label" parent="UI/StationInfoPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "STATION ALPHA"

[node name="StationType" type="Label" parent="UI/StationInfoPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Battle"

[node name="Separator" type="HSeparator" parent="UI/StationInfoPanel/VBox"]
layout_mode = 2

[node name="FacilityCount" type="Label" parent="UI/StationInfoPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Facilities: 3"

[node name="EnemyLabel" type="Label" parent="UI/StationInfoPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Enemies:"

[node name="EnemyPreview" type="HBoxContainer" parent="UI/StationInfoPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="UI/StationInfoPanel/VBox/EnemyPreview"]
layout_mode = 2
text = "  "

[node name="Separator2" type="HSeparator" parent="UI/StationInfoPanel/VBox"]
layout_mode = 2

[node name="RewardLabel" type="Label" parent="UI/StationInfoPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
text = "Rewards: 2-4 Credits"

[node name="BottomBar" type="HBoxContainer" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -70.0
offset_right = -16.0
offset_bottom = -16.0
alignment = 1
theme_override_constants/separation = 20

[node name="BackBtn" type="Button" parent="UI/BottomBar"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "BACK"

[node name="ContinueBtn" type="Button" parent="UI/BottomBar"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "CONTINUE"

[node name="Instructions" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -90.0
offset_right = 250.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "[A/D] or [Drag] Rotate | [R/F] or [Scroll] Zoom"
horizontal_alignment = 1
